# UnifiedCopyPaste

./: Cargo.toml  Rocket.toml  readme.md
scripts/: get_clipboard.sh  rofi-clipboard-selector.sh
static/: style.css
templates/: index.hbs  index.html.tera
tests/: api_tests.org
