[package]
name = "unified_copy_paste"
version = "0.2.0"
edition = "2021"
default-run = "ucp-server"

[[bin]]
name = "ucp-server"
src = "src/bin/ucp-server.rs"

[[bin]]
name = "ucp-daemon"
src = "src/bin/ucp-daemon.rs"

[dependencies]
x11-clipboard = "0.5.3"
daemonize = "0.4.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.1", features=["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
hostname = "^0.3"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]


