[package]
name = "unified_copy_paste"
version = "0.2.0"
edition = "2021"
default-run = "ucp-daemon"

[[bin]]
name = "ucp-daemon"
src = "src/bin/ucp-daemon.rs"

[dependencies]
x11-clipboard = "0.5.3"
daemonize = "0.4.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
hostname = "^0.3"
ctrlc = { version = "3.2.2", features = ["termination"] }
single-instance = "0.3"
websocket = "0.26.4"


